app/assets/stylesheets/master.css.scss
.clear {
	clear:both;
}
.circle {
    font-weight:bold;
    font-style: italic;
    position: relative;
    border-radius: 100%;
    background: green;
    border: 1px solid #F7F7F7;
    width: 80px;
    height: 80px;
    margin: 10px 10px;
    text-align: center;
    color: #FFF;
    font-size: 10px;
    line-height: 16px;
    cursor: pointer;
    box-shadow: 5px 5px 5px #888888;
    transform:rotate(11deg);
    -ms-transform:rotate(11deg); /* IE 9 */
    -webkit-transform:rotate(11deg); /* Opera, Chrome, and Safari */
}
h1 {
	font-family: 'cantarellregular', sans-serif;
	font-weight:bold;
	 font-size:48px;
}
.next-quote {
	color:#f84342;
	font-family: 'cantarelloblique', sans-serif;
	font-size:20px;

}

h2 {
	font-family: 'cantarellregular', sans-serif;
}
.author
{
	font-family: 'cantarelloblique', sans-serif;
}
.about
{
 font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
}
::selection {
	background-color:#f84342;
}
h2 span
{
	color: #dddddd;
	font-family: 'cantarellregular', sans-serif;
	
}
.slogan
{
 font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;	font-style: italic;
	 display: flex;
	 padding-top:15px;
    align-items: center;
    height: 100px;
}
.modal {
  font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
}
.footer-blurb 
{
 font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;	font-style: italic;
	 text-align:right;
	 font-size:10px;
}
.links {
	text-align:right;
	padding-top:37px;

}
.logo:hover {
	text-decoration:none;
}
@media (max-width:750px){
	.footer-blurb {
		text-align: left;
	}
}
.links a:hover
{
	text-decoration:none;
	border-bottom: 1px solid black;
}
.links a {
	font-family: 'cantarellregular';
	font-weight: bold;
	color:black;
	font-size:20px;
	border-bottom: 1px solid #dfdfdf;
}
hr {
	clear:both;
}
header {
	border-top:9px solid #222222;
}

